syntax = "proto3";

package spine.validation.testing.requiredfield_suite;

// Test messages for the `(required_field)` message-level validation option.
//
// This file contains test cases for the `(required_field)` constraint that
// requires specific combinations of fields using boolean logic (OR, AND, and
// parentheses for grouping). The constraint is specified at the message level.

import "spine/options.proto";

// Tests simple OR logic: at least one field must be set.
message UserIdentifier {
    option (required_field) = "id | email";

    int32 id = 1;
    string email = 2;
}

// Tests AND logic: both fields must be set together.
message ContactInfo {
    option (required_field) = "phone & country_code";

    string phone = 1;
    string country_code = 2;
}

// Tests complex OR with AND groups.
message PersonName {
    option (required_field) = "given_name | (honorific_prefix & family_name)";

    string honorific_prefix = 1;
    string given_name = 2;
    string middle_name = 3;
    string family_name = 4;
    string honorific_suffix = 5;
}

// Tests multiple OR alternatives.
message PaymentMethod {
    option (required_field) = "credit_card | bank_account | paypal_email";

    string credit_card = 1;
    string bank_account = 2;
    string paypal_email = 3;
}

// Tests multiple AND requirements.
message ShippingAddress {
    option (required_field) = "street & city & postal_code & country";

    string street = 1;
    string city = 2;
    string postal_code = 3;
    string country = 4;
    string state = 5;
}

// Tests complex nested logic with grouping.
message AccountCreation {
    option (required_field) = "(username & password) | oauth_token";

    string username = 1;
    string password = 2;
    string oauth_token = 3;
}

// Tests message without required_field constraint (all fields optional).
message OptionalData {
    string field1 = 1;
    string field2 = 2;
    int32 field3 = 3;
}
